--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </a>
               </span>
               <!-- Video Link. -->
-              <span class="link-block">
+         <!--      <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -172,7 +172,7 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/Waller-Lab/EncodingInformation"
@@ -231,10 +231,11 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
+        <p>Coming soon...</p>
+<!--         <div class="publication-video">
           <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--/ Paper video. -->
