--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
 
 
       <!-- Info estimation. -->
+      <section>
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="container is-max-desktop">
             <div class="content">
               <h2 class="title is-3 section-title">Information Estimation Framework</h2>
 
-              <!-- Overview -->
-              <!-- <h3 class="title is-4 has-text-primary mt-5 mb-3">The Basic Idea</h3> -->
+    >
               <div class="content has-text-justified">
                   <p>We model imaging systems (encoders) as functions that transform objects into images, which are then captured with noise by a detector. Using just these noisy measurements and knowledge of the noise characteristics, we can evaluate system quality and guide improvements.</p>
               </div>
@@ -324,11 +324,12 @@
           </div>
         </div>
       </div>
-
+  </section>
 
 
 
       <!-- Applicaitons. -->
+      <section>
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="container is-max-desktop">
@@ -370,6 +371,7 @@
           </div>
         </div>
       </div>
+    </section>
 
 
 
