--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 
       <!-- Info estimation. -->
-      <section>
+      <section class="section">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="container is-max-desktop">
@@ -329,7 +329,7 @@
 
 
       <!-- Applicaitons. -->
-      <section>
+      <section class="section">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="container is-max-desktop">
