--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="content">
               <h2 class="title is-3 section-title">Information Estimation Framework</h2>
 
-    >
+    
               <div class="content has-text-justified">
                   <p>We model imaging systems (encoders) as functions that transform objects into images, which are then captured with noise by a detector. Using just these noisy measurements and knowledge of the noise characteristics, we can evaluate system quality and guide improvements.</p>
               </div>
@@ -269,6 +269,15 @@
               <div class="content has-text-centered">
                   <video id="info_intuition" autoplay="" muted="" loop="" playsinline="" height="100%">
                       <source src="./static/videos/info_intuition.mp4" type="video/mp4">
+                  </video>
+
+                  <video 
+                    autoplay 
+                    muted 
+                    loop 
+                    playsinline
+                    width="100%">
+                    <source src="./static/videos/info_intuition.mp4" type="video/mp4">
                   </video>
               </div>
 
