--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   <p>Information measures how well we can distinguish different objects from noisy measurements. When noise increases, multiple objects could have produced the same measurement, making them harder to tell apart and reducing the information content.</p>
               </div>
               <div class="content has-text-centered">
-                  <video id="info_intuition" autoplay="" muted="" loop="" playsinline="" height="100%">
+                  <video id="info_intuition" autoplay muted loop playsinline height="100%">
                       <source src="./static/videos/info_intuition.mp4" type="video/mp4">
                   </video>
               </div>
