--- a/index.html
+++ b/index.html
@@ -60,15 +60,6 @@
         });
     </script>
 
-<!-- Fix autopla on mobile -->
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        document.querySelectorAll('video').forEach(video => {
-            video.play().catch(error => console.log('Autoplay failed:', error));
-        });
-    });
-</script>
-
 </head>
 <body>
 
@@ -286,8 +277,8 @@
                   <p>To estimate information, we measure the total variability in measurements and subtract out the portion caused by noise.</p>
               </div>
               <div class="content has-text-centered">
-                  <video id="info_estimator" autoplay muted loop playsinline height="auto">
-                      <source src="./static/videos/info_estimator.mp4" type="video/mp4">
+                  <video id="info_estimator" autoplay muted loop playsinline height="100%">
+                      <source src="./static/videos/info_estimator2.mp4" type="video/mp4">
                   </video>
               </div>
 
