--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                   <p>To estimate information, we measure the total variability in measurements and subtract out the portion caused by noise.</p>
               </div>
               <div class="content has-text-centered">
-                  <video id="info_estimator" autoplay muted loop playsinline controls height="100%">
+                  <video id="info_estimator" autoplay muted loop playsinline controls  preload="auto" height="100%">
                       <source src="./static/videos/info_estimator.mp4" type="video/mp4">
                   </video>
               </div>
