remove stuff that didnt work

--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
                   <p>Information measures how well we can distinguish different objects from noisy measurements. When noise increases, multiple objects could have produced the same measurement, making them harder to tell apart and reducing the information content.</p>
               </div>
               <div class="content has-text-centered">
-<!--                   <video id="info_intuition" autoplay muted loop playsinline height="100%">
+                  <video id="info_intuition" autoplay muted loop playsinline height="100%">
                       <source src="./static/videos/info_intuition.mp4" type="video/mp4">
-                  </video> -->
+                  </video>
               </div>
 
               <!-- Estimation Method -->
@@ -276,11 +276,11 @@
               <div class="content has-text-justified">
                   <p>To estimate information, we measure the total variability in measurements and subtract out the portion caused by noise.</p>
               </div>
-             <!--  <div class="content has-text-centered">
-                  <video id="info_estimator" autoplay muted loop playsinline height="100%">
+              <div class="content has-text-centered">
+                  <video id="info_estimator" autoplay muted loop playsinline height="auto">
                       <source src="./static/videos/info_estimator.mp4" type="video/mp4">
                   </video>
-              </div> -->
+              </div>
 
               <!-- Mathematical Framework -->
               <!-- <h3 class="title is-4 has-text-primary mt-5 mb-3">Mathematical framework</h3> -->
@@ -311,7 +311,7 @@
 
 
               <div class="content has-text-centered">
-                <video id="upper_bound_model" autoplay="" muted="" preload loop="" playsinline="" height="100%">
+                <video id="upper_bound_model" autoplay="" muted="" loop="" playsinline="" height="100%">
                   <source src="./static/videos/upper_bound_model.mp4" type="video/mp4">
                 </video>
               </div>
