--- a/index.html
+++ b/index.html
@@ -212,16 +212,18 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Most modern imaging systems process the data they capture algorithmically before—or instead of—human viewing. As a result, the information content of raw measurements matters more than their visual appearance. Information theory provides mathematical tools to analyze this, but developing methods that can handle the complexity of real-world measurements yet remain practical enough for widespread use has proven challenging.
+            Most modern imaging systems process the data they capture algorithmically before—or instead of—human viewing. As a result, performance depends not on how interpretable the measurements appear, but how effectively they encode details for algorithmic processing. Information theory provides mathematical tools to analyze this, but developing methods that can handle the complexity of real-world measurements yet remain practical enough for widespread use has proven challenging.
           </p>
 
           <p>
-          We introduce a data-driven approach for estimating the information content of imaging system measurements. Our framework requires only experimental measurements and noise characterization, with no need for ground truth data. We demonstrate that these information estimates reliably predict system performance across diverse imaging modalities, including color photography, radio astronomy, lensless imaging, and microscopy. To automate the process of designing imaging systems to maximize information capture we introduce an optimization technique called Information-Driven Encoder Analysis Learning (IDEAL). This work unlocks information theory as a powerful, practical tool for analyzing and designing imaging systems across a broad range of applications.
+           We introduce a data-driven approach for estimating the information content of imaging system measurements. Our framework requires only experimental measurements and noise characterization, with no need for ground truth data. We demonstrate that these information estimates reliably predict system performance across diverse imaging modalities, including color photography, radio astronomy, lensless imaging, and microscopy. To automate the process of designing imaging systems that maximize information capture we introduce an optimization technique called Information-Driven Encoder Analysis Learning (IDEAL). The tools we develop in this work unlock information theory as a powerful, practical tool for analyzing and designing imaging systems across a broad range of applications.
         </p>
         </div>
       </div>
     </div>
     <!--/ Abstract. -->
+
+
 
 
 
@@ -362,7 +364,6 @@
       </div>
 
 
-      <!-- Applicaitons. -->
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="container is-max-desktop">
@@ -376,8 +377,22 @@
               </div>
 
               <div class="content has-text-centered">
-                <!-- <img src="static/images/applications_figure.png" alt="Applications of Information Estimation" style="width: 100%; margin-top: 15px; margin-bottom: 15px;"> -->
+                <img src="static/images/IDEAL_overview.png" alt="Information-Driven Encoder Analysis Learning (IDEAL)" style="width: 100%; margin-top: 15px; margin-bottom: 15px;">
               </div>
+
+              <div class="content has-text-justified">
+                <p>
+                  The video below shows a filter for color photography being optimized to maximize the information captured in its measurements.
+                </p>
+              </div>
+
+
+              <div class="content has-text-centered">
+                <video id="ideal" autoplay="" muted="" loop="" playsinline="" height="100%">
+                  <source src="./static/videos/ideal.mp4" type="video/mp4">
+                </video>
+              </div>
+
             </div>
           </div>
         </div>
