--- a/index.html
+++ b/index.html
@@ -232,11 +232,25 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
-        <p>Coming soon...</p>
+        <!-- <p>Coming soon...</p> -->
 <!--         <div class="publication-video">
           <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div> -->
+
+
+    <div style="padding:56.25% 0 0 0;position:relative;">
+        <iframe src="https://player.vimeo.com/video/1029766308?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+        frameborder="0" 
+        allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+        style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+        title="Information-driven design of imaging systems">
+      </iframe>
+    </div>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+
+
+
       </div>
     </div>
     <!--/ Paper video. -->
