--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
                 </a>
               </span>
               <!-- Video Link. -->
-         <!--      <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
+              <span class="link-block">
+                <a href="https://www.youtube.com/watch?v=2bSnbygpeaI"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
                   <span>Video</span>
                 </a>
-              </span> -->
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/Waller-Lab/EncodingInformation"
@@ -232,23 +232,22 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
-        <!-- <p>Coming soon...</p> -->
 <!--         <div class="publication-video">
           <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div> -->
 
 
-    <div style="padding:56.25% 0 0 0;position:relative;">
-        <iframe src="https://player.vimeo.com/video/1029766308?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+<div style="padding:56.25% 0 0 0;position:relative;">
+    <iframe 
+        src="https://player.vimeo.com/video/1029766308?title=0&byline=0&portrait=0&sidedock=0&controls=1&dnt=1" 
         frameborder="0" 
-        allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+        allow="autoplay; fullscreen; picture-in-picture" 
         style="position:absolute;top:0;left:0;width:100%;height:100%;" 
         title="Information-driven design of imaging systems">
-      </iframe>
-    </div>
-    <script src="https://player.vimeo.com/api/player.js"></script>
-
+    </iframe>
+</div>
+<script src="https://player.vimeo.com/api/player.js"></script>
 
 
       </div>
