--- a/index.html
+++ b/index.html
@@ -417,14 +417,16 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{pinkard2024universalevaluationdesignimaging,
-      title={Universal evaluation and design of imaging systems using information estimation}, 
+    <pre><code>
+      @article{pinkard2024informationdrivendesignimagingsystems,
+      title={Information-driven design of imaging systems}, 
       author={Henry Pinkard and Leyla Kabuli and Eric Markley and Tiffany Chien and Jiantao Jiao and Laura Waller},
       year={2024},
       eprint={2405.20559},
       archivePrefix={arXiv},
       primaryClass={physics.optics},
       url={https://arxiv.org/abs/2405.20559}, 
+      }
 }</code></pre>
   </div>
 </section>
