--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
       primaryClass={physics.optics},
       url={https://arxiv.org/abs/2405.20559}, 
       }
-}</code></pre>
+</code></pre>
   </div>
 </section>
 
