--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
       content="information theory, computational imaging, optical design, imaging systems, machine learning, optimization, microscopy, astronomy">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Information-Driven Design of Imaging Systems</title>
+ 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7DPEDT2PJZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script> -->
+  gtag('config', 'G-7DPEDT2PJZ');
+</script>
+
+
+
   <script>
     window.dataLayer = window.dataLayer || [];
 
