--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
               </div>
 
               <div class="content has-text-centered">
-                <img src="static/images/ideal_perf.png" alt="IDEAL performance comparison with end-to-end optimization" style="width: 70%; max-width: 400px; margin-top: 15px; margin-bottom: 15px;">
+                <img src="static/images/IDEAL_perf.png" alt="IDEAL performance comparison with end-to-end optimization" style="width: 70%; max-width: 400px; margin-top: 15px; margin-bottom: 15px;">
               </div>
 
             </div>
@@ -481,8 +481,8 @@
 
           <ul>
             <li><a href="https://arxiv.org/abs/2507.07789" target="_blank"><b>IDEAL-IO:</b></a>Further study on IDEAL that identifies areas for improvement and compares its performance to end-to-end design across a several imaging domains.</li>
-            <li><a href="https://arxiv.org/abs/2506.08513" target="_blank"><b>Designing lensless imaging systems for maximum information capture:</b></a> Application of information estimation to discovery design principles based on object sparsity for lensless imaging </li>
-            <li><a href="https://lakabuli.github.io/posts/bayesian_information_optimization.html" target="_blank"><b>Bayesian optimization for non-differentiable systems:</b></a> Information-driven design on other combinatorial design problems where gradient-based methods cannot apply</li>
+            <li><a href="https://arxiv.org/abs/2506.08513" target="_blank"><b>Designing lensless imaging systems for maximum information capture:</b></a> Application of information estimation to the discovery of design principles based on object sparsity for lensless cameras </li>
+            <li><a href="https://lakabuli.g ithub.io/posts/bayesian_information_optimization.html" target="_blank"><b>Bayesian optimization for non-differentiable systems:</b></a> Information-driven design on other combinatorial design problems where gradient-based methods cannot apply</li>
           </ul>
         </div>
       </div>
