add another picture

--- a/index.html
+++ b/index.html
@@ -323,11 +323,21 @@
               <div class="content has-text-centered">
                   <img src="static/images/info_estimation_overview.png" alt="Information Estimation Overview" style="width: 100%; margin-top: 15px; margin-bottom: 15px;">
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
 
-              <!-- Information and Noise -->
-              <!-- <h3 class="title is-4 has-text-primary mt-5 mb-3">Information & Noise</h3> -->
+      <!-- What Does Information Quantify. -->
+      <section class="section">
+      <div class="container is-max-desktop">
+        <div class="columns is-centered">
+          <div class="container is-max-desktop">
+            <div class="content">
+              <h2 class="title is-3 section-title">What Does Information Quantify?</h2>
               <div class="content has-text-justified">
-                  <p>Information measures how well we can distinguish different objects from noisy measurements. When noise increases, multiple objects could have produced the same measurement, making them harder to tell apart and reducing the information content.</p>
+                  <p>Information quantify how well we can distinguish different objects using noisy measurements. When noise increases, multiple objects could have produced the same measurement, making them harder to tell apart and reducing the information content.</p>
               </div>
               <div class="content has-text-centered">
                   <video id="info_intuition" autoplay muted loop playsinline height="100%">
@@ -335,8 +345,25 @@
                   </video>
               </div>
 
-              <!-- Estimation Method -->
-              <!-- <h3 class="title is-4 has-text-primary mt-5 mb-3">How We Estimate Information</h3> -->
+              <div class="content has-text-justified">
+                  <p>Information accounts not only for noise, but for all factors that affect measurement quality—including resolution, sampling, color sensitivity, and optical aberrations. It provides a unified metric that captures how these factors combine to determine system performance.</p>
+              </div>
+              <div class="content has-text-centered">
+                  <img src="static/images/noise_res_spectrum.png" alt="Information captures noise, resolution, and spectral sensitivity" style="width: 100%; max-width: 800px; margin-top: 15px; margin-bottom: 30px;">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+
+      <!-- Our Estimation Approach. -->
+      <section class="section">
+      <div class="container is-max-desktop">
+        <div class="columns is-centered">
+          <div class="container is-max-desktop">
+            <div class="content">
+              <h2 class="title is-3 section-title">Our Estimation Approach</h2>
               <div class="content has-text-justified">
                   <p>To estimate information, we measure the total variability in measurements and subtract out the portion caused by noise.</p>
               </div>
@@ -391,10 +418,6 @@
                   <source src="./static/videos/upper_bound_model.mp4" type="video/mp4">
                 </video>
               </div>
-
-
-
-
             </div>
           </div>
         </div>
