--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
                 </a>
               </span>
               <!-- Video Link. -->
-         <!--      <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=2bSnbygpeaI"
+              <span class="link-block">
+                <a href="https://www.youtube.com/watch?v=yDIUqB0SdW4"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
                   <span>Video</span>
                 </a>
-              </span> -->
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/Waller-Lab/EncodingInformation"
