--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">Information-Driven Design of Imaging Systems</h1>
+          <p class="is-size-5 has-text-centered" style="font-style: italic; margin-top: 10px; margin-bottom: 20px;">NeurIPS 2025</p>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
                 <a href="https://henrypinkard.github.io/">Henry Pinkard</a>,
