--- a/index.html
+++ b/index.html
@@ -183,6 +183,16 @@
                   <span>Video</span>
                 </a>
               </span>
+              <!-- Poster Link. -->
+              <span class="link-block">
+                <a href="static/Neurips_poster.pdf" target="_blank"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-image"></i>
+                  </span>
+                  <span>Poster</span>
+                </a>
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/Waller-Lab/EncodingInformation"
