--- a/encoding-structure.html
+++ b/encoding-structure.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="A Minimal Model of the Structure of Information Encoding">
+        content="A Toy Model of the Structure of Information Encoding">
 
-<meta property="og:title" content="A Minimal Model of the Structure of Information Encoding">
+<meta property="og:title" content="A Toy Model of the Structure of Information Encoding">
 <meta property="og:description"
       content="A 1D model system revealing how physical constraints shape the geometry of information encoding.">
 
   <meta name="keywords"
       content="information theory, signal encoding, Shannon geometry, mutual information, imaging systems, point spread function, bandwidth, SNR">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>A Minimal Model of the Structure of Information Encoding</title>
+  <title>A Toy Model of the Structure of Information Encoding</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -47,7 +47,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-3 publication-title">A Minimal Model of the Structure of Information Encoding</h1>
+          <h1 class="title is-3 publication-title">A Toy Model of the Structure of Information Encoding</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
                 <a href="https://henrypinkard.github.io/">Henry Pinkard</a>,
