--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     
               <div class="content has-text-justified">
-                  <p>We model imaging systems (encoders) as functions that transform objects into images, which are then captured with noise by a detector. Using just these noisy measurements and knowledge of the noise characteristics, we can evaluate system quality and guide improvements. For a deeper look at how physical constraints shape the structure of information encoding, see <a href="encoding-structure.html">A Minimal Model of the Structure of Information Encoding</a>.</p>
+                  <p>We model imaging systems (encoders) as functions that transform objects into images, which are then captured with noise by a detector. Using just these noisy measurements and knowledge of the noise characteristics, we can evaluate system quality and guide improvements. For a deeper look at how physical constraints shape the structure of information encoding, see <a href="encoding-structure.html">A Toy Model of the Structure of Information Encoding</a>.</p>
               </div>
               <div class="content has-text-centered">
                   <img src="static/images/info_estimation_overview.png" alt="Information Estimation Overview" style="width: 100%; margin-top: 15px; margin-bottom: 15px;">
