--- a/encoding-structure.html
+++ b/encoding-structure.html
@@ -47,7 +47,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-3 publication-title">A Toy Model of the Structure of Information Encoding</h1>
+          <h1 class="title publication-title" style="font-size: 2.3rem;">A Toy Model of the Structure of Information Encoding</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
                 <a href="https://henrypinkard.github.io/">Henry Pinkard</a>,
