--- a/encoding-structure.html
+++ b/encoding-structure.html
@@ -82,10 +82,13 @@
       <div class="container is-max-desktop">
         <div class="content has-text-justified">
           <p>
-            How many distinguishable signals can you pack into finite dimensions when noise, interference, or discretization distort every signal? With no restriction on how signals are produced, reliable communication reduces to packing non-overlapping noise spheres into signal space. In practice, many encoders cannot produce arbitrary signals, thereby limiting the information that signals can carry.
+            How many signals can be reliably encoded into finite dimensions in the presence of noise, interference, or discretization? With no restriction on the encoder, this reduces to packing non-overlapping noise spheres into signal space. In practice, many encoders cannot produce arbitrary signals, thereby limiting the information that signals can carry.
           </p>
           <p>
-            Here we study a toy model of this phenomenon: convolutional encoding of 1D periodic signals. These signals are low-dimensional enough to exhaustively compute and visualize, but rich enough to exhibit the constraints that govern real systems. We define the model, show how physical constraints limit the encoder's range, and quantify the resulting information loss and its scaling with SNR, bandwidth, and sampling. As one concrete application, we characterize the resolution-noise tradeoff in two-point resolution, a classic problem in optics. The encoder's constraints create an information gap that grows with dimensionality, and resolution and noise trade off along contours of equal information.
+            Here we study a toy model of this phenomenon: convolutional encoding of 1D periodic signals. These signals are low-dimensional enough to exhaustively compute and visualize, but rich enough to exhibit the constraints that govern real systems. We define the model, show how constraints limit the encoder's range, and quantify the resulting information gap, which grows with dimensionality. As one concrete application, we characterize two-point resolution, a classic problem in optics, showing how resolution and noise trade off along contours of equal information.
+          </p>
+          <p>
+            The interaction between the signals being encoded and the constraints of the encoder determines the most efficient geometry for packing signals in the space to preserve information. These findings provide a blueprint for empirically studying these phenomena across a wide range of information encoding problems.
           </p>
         </div>
       </div>
@@ -103,7 +106,7 @@
           <h2 class="title is-4 section-title">The 1D Model System</h2>
           <div class="content has-text-justified">
             <p>
-              How well can an encoder spread signals through output space so they remain distinguishable after noise? To answer this, we define a minimal model. Input signals live on a 1D periodic domain. Each is encoded by a bandlimited, nonnegative convolution kernel (a point spread function), as shown in <a href="#fig-model"><strong>(a)</strong></a>. The encoded signal can be represented as a point in a finite-dimensional space. Nonnegativity and energy conservation confine these points to a simplex. Bandlimitedness further restricts the reachable region: convolution with a finite-bandwidth kernel cannot concentrate all energy at a single point, so the valid signals (green in <a href="#fig-model"><strong>(b)</strong></a>) occupy only a subset of that simplex.
+              How well can an encoder distribute signals in a space so that they remain distinguishable after distortion? To answer this, we define a minimal model. Input signals live on a 1D periodic domain. Each is encoded by a bandlimited, nonnegative convolution kernel (a point spread function), as shown in <a href="#fig-model"><strong>(a)</strong></a>. Integrating the encoded signal over sampling intervals yields a point in a finite-dimensional space, where each coordinate is the energy in one interval. These coordinates are nonnegative and sum to at most unit energy (the positive orthant of the L1 unit ball). Bandlimitedness further restricts the reachable region: convolution with a finite-bandwidth kernel cannot concentrate all energy at a single point, so the valid signals (green in <a href="#fig-model"><strong>(b)</strong></a>) occupy only a subset of that simplex.
             </p>
           </div>
           <div class="content has-text-centered">
@@ -139,7 +142,7 @@
           </div>
           <div class="content has-text-justified">
             <p>
-              The boundary of each reachable region was found by optimization (gradient descent toward target points in signal space). We verified these boundaries by repeating the optimization from many random initializations and by optimizing toward randomly sampled feasible points; both approaches consistently recovered the same boundaries.
+              The boundary of each reachable region was found by optimization (gradient descent toward target points in signal space). If the optimizer were getting stuck in local minima, the true reachable region could be larger than what we show. To rule this out, we repeated the optimization from many random initializations and optimized toward randomly sampled feasible points; both approaches consistently recovered the same boundaries.
             </p>
           </div>
         </div>
@@ -195,7 +198,7 @@
             </p>
             <ul>
               <li><strong>Signal-to-noise ratio</strong> (left): Information grows logarithmically with SNR. Sparser sources (deltas) encode more efficiently than dense ones (white noise) at every SNR level.</li>
-              <li><strong>Degrees of freedom</strong> (center): Information grows approximately linearly with bandwidth. Rates are source-dependent, with sparser sources benefiting more from additional dimensions.</li>
+              <li><strong>Degrees of freedom</strong> (center): Information grows approximately linearly with bandwidth at source-dependent rates.</li>
               <li><strong>Sampling density</strong> (right): Oversampling beyond the Nyquist rate still increases information, but with diminishing returns. Higher SNR amplifies the benefit of oversampling.</li>
             </ul>
           </div>
